--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mercadopago/sdk-react": "^0.0.23",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
